--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.1",
     "eslint": "^9.1.1",
     "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.0",
     "postcss-loader": "^8.1.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
@@ -39,14 +41,18 @@
     "webpack-merge": "^5.10.0"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.4.2",
     "@popperjs/core": "^2.11.8",
     "@tanstack/react-query": "^5.45.1",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
-    "axios": "^1.7.2",
+    "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "formik": "^2.4.6",
     "jquery": "^3.7.1",
+    "next": "^14.2.6",
     "popper.js": "^1.16.1",
+    "react-router-dom": "^6.26.1",
     "react-tabindex": "^1.0.3",
     "typescript": "^5.4.5",
     "uuid": "^9.0.1"
