--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "formik": "^2.4.6",
     "jquery": "^3.7.1",
     "next": "^14.2.6",
